--- a/基础数据结构/队列/覆盖.md
+++ b/基础数据结构/队列/覆盖.md
@@ -43,5 +43,48 @@
 
 
 
+```c++
+#include <bits/stdc++.h>
+
+using namespace std;
+
+#define rep(i, n) for (int i = 0; i < n; i++) 
+#define Rep(i, a, b) for (int i = a; i <= b; i++)
+#define Repp(i, a, b) for (int i = a; i >= b; i--)
+#define x first
+#define y second
+#define IOS ios::sync_with_stdio(0); cin.tie(0); cout.tie(0)
+typedef long long LL;
+typedef pair<int, int> PII;
+
+const int N = 100010;
+int a[N], n, h, q1[N], q2[N], hh1, hh2, tt1 = -1, tt2 = -1;
+
+int main()
+{
+    cin >> n >> h;
+    for (int i = 1; i <= n; i++) cin >> a[i];
+
+    int j = 0, res = 0;
+    for (int i = 1; i <= n; i++) {
+        if (hh1 <= tt1 && q1[hh1] < i) ++hh1;
+        if (hh2 <= tt2 && q2[hh2] < i) ++hh2;
+        while (j <= n && (j <= i || a[q1[hh1]] - a[q2[hh2]] <= h)) {
+            ++j;
+            if (j > n) break;
+            while (hh1 <= tt1 && a[q1[tt1]] <= a[j]) --tt1;
+            q1[++tt1] = j;
+            while (hh2 <= tt2 && a[q2[tt2]] >= a[j]) --tt2;
+            q2[++tt2] = j;
+        }
+        res = max(res, j - i);
+    }
+    cout << res << endl;
+    return 0;
+}
+```
+
+
+
 
 
