--- a/动态规划/概率动态规划问题/走路3.md
+++ b/动态规划/概率动态规划问题/走路3.md
@@ -16,3 +16,52 @@
 ```
 
 数据范围：$$2 \le n \le 100, 1 \le m \le 1000$$
+
+```c++
+#include <bits/stdc++.h>
+
+using namespace std;
+
+#define rep(i, n) for (int i = 0; i < n; i++) 
+#define Rep(i, a, b) for (int i = a; i <= b; i++)
+#define Repp(i, a, b) for (int i = a; i >= b; i--)
+#define x first
+#define y second
+#define IOS ios::sync_with_stdio(0); cin.tie(0); cout.tie(0)
+typedef long long ll;
+typedef pair<int, int> PII;
+
+ll f[101];
+int n, m, p = 1e9 + 7;
+vector<int> edges[1001];
+
+ll rp(ll x, int k) {
+	ll res = 1;
+	for (; k; k >>= 1, x *= x, x %= p)
+		if (k & 1) res *= x, res %= p;
+	return res;
+}
+
+int main()
+{
+    cin >> n >> m;
+    for (int i = 1; i <= m; i++) {
+    	int x, y;
+    	cin >> x >> y;
+    	edges[x].push_back(y);
+    }
+    memset(f, 0, sizeof f);
+    f[n] = 0;
+    for (int i = n - 1; i; i--) {
+    	f[i] = 1;
+    	for (auto x : edges[i]) 
+    		f[i] += (f[x] * rp(edges[i].size(), p - 2)) % p,
+    		f[i] %= p;
+    }
+    cout << f[1] << endl;
+    return 0;
+}
+```
+
+
+
