--- a/基础数据结构/并查集/修路.md
+++ b/基础数据结构/并查集/修路.md
@@ -3,7 +3,7 @@
 有n个城市，编号从1到n。现在已经修好了m条道路，一条道路可以连接第X个和第y个城
 市。现在询问最少再修几条道路，可以使得所有城市都连通（可以通过道路从任意一个城市到另
 一个城市)
-第一行输入两个数字n,m。之后每m行给出两个数字x,y(x≠y),表示一条从×城市到y城市的
+第一行输入两个数字n,m。之后每m行给出两个数字x,y(x≠y),表示一条从x城市到y城市的
 路。
 
 
